--- a/style.css
+++ b/style.css
@@ -8,9 +8,16 @@
     box-sizing: border-box;
 }
 
-header{
-    height: 10vh;
-    background-color: brown;
+:root {
+    --main-header-height: 60px;
+}
+
+#main-header{
+    height: var(--main-header-height);
+}
+
+#main-section{
+    height: calc(100vh -var(--main-header-height));
 }
 
 main{
@@ -34,3 +41,4 @@ main{
 .right-header{
     background-color: #1B72E8;
 }
+
